--- a/src/app/card-actor/card-actor.component.html
+++ b/src/app/card-actor/card-actor.component.html
@@ -1,19 +1,24 @@
 <div id="card">
-
-    <div id="text-actor">
-        <div id="name-actor">
-            <h2>{{ nameActor }}</h2>
+    <div id="info_actor">    
+        
+        <div id="text-actor">
+            <div id="name-actor">
+                <h2>{{ nameActor }}</h2>
+            </div>
+        
+                <p id="description-actor">
+                    {{ description }}
+                </p>
         </div>
-    
-            <p id="description-actor">
-                {{ description }}
-            </p>
+
+        <div id="image-actor">
+            <img [src]="imageUrl " alt="image-actor">
+        </div>
     </div>
 
-    <div id="image-actor">
-        <img [src]="imageUrl " alt="image-actor">
+
+    <div id="chevron">
+        <button (click)="displayFilm()"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--! Font Awesome Pro 6.0.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M224 416c-8.188 0-16.38-3.125-22.62-9.375l-192-192c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L224 338.8l169.4-169.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-192 192C240.4 412.9 232.2 416 224 416z"/></svg></button>
     </div>
     
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><!--! Font Awesome Pro 6.0.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M9.375 329.4c12.51-12.51 32.76-12.49 45.25 0L128 402.8V32c0-17.69 14.31-32 32-32s32 14.31 32 32v370.8l73.38-73.38c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-128 128c-12.5 12.5-32.75 12.5-45.25 0l-128-128C-3.125 362.1-3.125 341.9 9.375 329.4z"/></svg>
-
 </div>
