--- a/src/app/card-actor/card-actor.component.scss
+++ b/src/app/card-actor/card-actor.component.scss
@@ -8,66 +8,119 @@ $white: #F5F5F5;
 }
 
 #card{
-
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+    flex-direction: column;
+    justify-content: space-between;
     width: 1200px;
+    height: 25em;
     background-color: $white;
+    margin: 0 auto;
+    border-radius: 10px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+    transition-duration: 0.5s;
 
-    #text-actor{
+    #info_actor{
+        display: flex;
+        justify-content: row;
 
-        #name-actor{
+        #text-actor{
 
-            margin: 30px;
-
-            h2{
-                margin: 0;
-                color: $rose;
-                font-size: 40px;
+            #name-actor{
+    
+                margin: 30px;
+    
+                h2{
+                    margin: 0;
+                    color: $rose;
+                    font-size: 40px;
+                }
+    
+                &::after{
+                    content: "";
+                    display: block;
+                    background-color: $blue;
+                    width: 160px;
+                    height: 20px;
+                    margin-top: -20px;
+    
+                }
+    
+                &::before{
+                    content: "";
+                    display: block;
+                    background-color: $blue;
+                    width: 160px;
+                    height: 20px;
+                    margin-left: 170px;
+                    margin-bottom: -25px;
+                }
             }
-
-            &::after{
-                content: "";
-                display: block;
-                background-color: $blue;
-                width: 160px;
-                height: 20px;
-                margin-top: -20px;
-
+    
+            #description-actor{
+                margin: 30px;
             }
-
-            &::before{
-                content: "";
-                display: block;
-                background-color: $blue;
-                width: 160px;
-                height: 20px;
-                margin-left: 170px;
-                margin-bottom: -25px;
+    
+    
+        }
+    
+    
+        #image-actor{
+    
+            img{
+                -webkit-box-shadow: 6px 7px 11px -1px rgba(0,0,0,0.61); 
+                box-shadow: 6px 7px 11px -1px rgba(0,0,0,0.61);
+                border-radius: 35px;
+                margin: 50px;
+                width: 40%;
             }
         }
-
-        #description-actor{
-            margin: 30px;
-        }
-
-
     }
 
 
-    #image-actor{
 
-        img{
-            -webkit-box-shadow: 6px 7px 11px -1px rgba(0,0,0,0.61); 
-            box-shadow: 6px 7px 11px -1px rgba(0,0,0,0.61);
-            border-radius: 35px;
-            margin: 50px;
-            width: 40%;
+    #chevron{
+        margin-left: auto;
+        margin-right: auto;
+
+
+        button{
+        
+            border: none;
+            background-color: transparent;
+            
+            svg{
+                width: 30px;    
+                cursor: pointer;
+            }
         }
     }
 
-    svg{
-        width: 50px;
+    .rotation{
+        transform: rotate(180deg);
+        animation: rotate 0.5s linear;
+    }
+
+    
+
+}
+
+
+@keyframes jump {
+    0% {
+        transform: translateY(5px); 
+    }
+
+    100%{
+        transform: translateY(0px);
+    }
+}
+
+@keyframes rotate{
+    0%{
+        transform: rotate(0deg);
+    }
+
+    100%{
+        transform: rotate(180deg);
     }
 }
