--- a/src/app/nation-card/nation-card.component.scss
+++ b/src/app/nation-card/nation-card.component.scss
@@ -6,6 +6,7 @@
     display: flex;
     flex-wrap: wrap;
     background-color: #F5F5F5;
+    margin-top: 50px;
     padding: 50px 25px;
     border-radius: 10px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;;
@@ -103,7 +104,7 @@
         color: #F05454;
         background-color: #F5F5F5;
         transform: translate(50%, -50%);
-        bottom: 5px;
+        bottom: -40px;
         right: 50%;
         border: none;
         padding: 20px;
