--- a/src/app/contact-form/contact-form.component.scss
+++ b/src/app/contact-form/contact-form.component.scss
@@ -1,67 +1,172 @@
-h1 {
-    text-align: center;
-    color: #F05454;
-    font-size: 50px;
-    margin-bottom: 15px;
-}
-
-label{
-    font-size: 20px;
-    color: #F5F5F5;
+.center {
+    width: 1200px;
+    margin: 0 auto;
 }
 
 .contactForm {
+    color: #f5f5f5;
+    h1 {
+        text-align: center;
+        color: #f05454;
+        font-size: 60px;
+        margin-bottom: 20px;
+    }
+    .contain {
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap;
+        .wrap {
+            width: 40%;
+            label {
+                font-size: 20px;
+                color: #f5f5f5;
+                display: block;
+                width: 100%;
+                text-align: center;
+                margin-bottom: 15px;
+            }
+            textarea {
+                width: 70%;
+                display: block;
+                align-self: center;
+                margin: 0 auto;
+                margin-bottom: 25px;
+                height: 100px;
+            }
+            input {
+                width: 70%;
+                display: block;
+                align-self: center;
+                margin: 0 auto;
+                margin-bottom: 25px;
+            }
+        }
+    }
+}
+
+.wrap1 {
+    margin-top: 30px;
+    text-align: center;
+}
+.wrap2 {
     display: flex;
     flex-direction: column;
-    color: #F5F5F5;
-}
-
-#prenom, #nom, #numero_telephone, #code_postal, #ville{
-    background-color: #FBF8F1;
-    border-color: #F05454;
-    border-radius: 0.3em;
-    font-size: 18px;
-    width: 20%;
-}
-
-#adresse_mail {
-    background-color: #FBF8F1;
-    border-color: #F05454;
-    border-radius: 0.3em;
-    font-size: 18px;
-    width: 30%;  
-}
-
-#adresse_postale{
-    background-color: #FBF8F1;
-    border-color: #F05454;
-    border-radius: 0.3em;
-    font-size: 18px;
+    margin: 50px 0 10px 430px;
+    text-align: center;
     width: 30%;
-    height: 80px;
-    margin: auto;
+    margin-bottom: 25px;
+}
+.message {
+    padding-bottom: 100px;
 }
 
-#message{
-    width: 80%;
-    height: 100px;
-    margin: auto;
-    background-color: #FBF8F1;
-    border-color: #F05454;
-    border-radius: 0.3em;
-    font-size: 18px;
-}
-
-.validation_button{
-    float: right;
-    margin: 20px 120px 20px 0px;
-    color: #F5F5F5;
+.validation_button {
+    width: 80px;
+    margin: 20px 0px 20px 0px;
+    margin-left: 65%;
+    color: #f5f5f5;
     font-size: 20px;
-    background-color: #F05454;
-    border-color: #F05454;
+    background-color: #f05454;
+    border-color: #f05454;
     border-radius: 0.3em;
 }
-
 button[type="submit"].validation_button:hover {
     background-color: #f57676;
 }
+
+.prenomLab + .inforsContact {
+    background-color: #fbf8f1;
+    border-color: #f05454;
+    border-radius: 0.3em;
+    font-size: 18px;
+}
+.nomLab + .inforsContact {
+    background-color: #fbf8f1;
+    border-color: #f05454;
+    border-radius: 0.3em;
+    font-size: 18px;
+}
+.adresse_mail {
+    background-color: #fbf8f1;
+    border-color: #f05454;
+    border-radius: 0.3em;
+    font-size: 18px;
+}
+.telephoneLab + .inforsContact {
+    background-color: #fbf8f1;
+    border-color: #f05454;
+    border-radius: 0.3em;
+    font-size: 18px;
+}
+.adresse_postale {
+    background-color: #fbf8f1;
+    border-color: #f05454;
+    border-radius: 0.3em;
+    font-size: 18px;
+}
+.codepLab + .inforsContact {
+    background-color: #fbf8f1;
+    border-color: #f05454;
+    border-radius: 0.3em;
+    font-size: 18px;
+}
+.villeLab + .inforsContact {
+    background-color: #fbf8f1;
+    border-color: #f05454;
+    border-radius: 0.3em;
+    font-size: 18px;
+}
+.objet_contact {
+    background-color: #fbf8f1;
+    border-color: #f05454;
+    border-radius: 0.3em;
+    font-size: 18px;
+}
+.messageLab {
+    margin-bottom: 20px;
+}
+.message {
+    background-color: #fbf8f1;
+    border-color: #f05454;
+    border-radius: 0.3em;
+    font-size: 18px;
+}
+
+// Code de Guillaume à garder au cas où ça plante !
+
+// .contactForm {
+//     color: #F5F5F5;
+// h1 {
+//     text-align: center;
+//     color: #F05454;
+//     font-size: 50px;
+//     margin-bottom: 15px;
+//     }
+//     label{
+//         font-size: 20px;
+//         color: #F5F5F5;
+//         display: block;
+//     }
+// .contain {
+//     display: flex;
+//     justify-content: space-around;
+//     flex-wrap: wrap;
+//         .wrap {
+//             width: 40%;
+//             label {
+//                 width: 100%;
+//                 text-align: center;
+//                 margin-bottom: 15px;
+//             }
+//             input {
+//                 width: 70%;
+//                 display: block;
+//                 align-self: center;
+//                 margin: 0 auto;
+//                 margin-bottom: 25px;
+//                 textarea {
+
+//                 }
+//             }
+//         }
+//     }
