dev fixed verion

--- a/src/app/nation-card/nation-card.component.html
+++ b/src/app/nation-card/nation-card.component.html
@@ -3,7 +3,7 @@
         <h3>{{nationnalite.title}}</h3>
         <h2>{{nationnalite.subtitle}}<span>{{nationnalite.span}}</span></h2>
         <p>{{nationnalite.description}}</p>
-        <!-- <p>{{Nationnalite.description}}</p> -->
+        <p>{{nationnalite.description}}</p>
     </div>
     <div class="picture-nation">
         <div class="img">
