--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -3,13 +3,12 @@
     <div class="center">
          <span><img src="assets/image/logo.png"></span>
          
-    <div class="spacer"></div>
+    <!-- <div class="spacer"></div> -->
 <nav>
-    
-    <a mat-button routerLink="français">Français</a>
-    <a mat-button routerLink="anglais">Anglais</a>
-    <a mat-button routerLink="americains">Americains</a>
-    <a mat-button routerLink="contact">Contact</a>
+    <a href="#USA">Français</a>
+    <a href="#USA">Anglais</a>
+    <a href="#USA">Americains</a>
+    <a href="/contact">Contact</a>
 </nav>
 
     </div>
