--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,4 @@
-
-<section class="actor">
-  <app-navbar></app-navbar>
-  <app-contact-form></app-contact-form>
-  <app-nation-card></app-nation-card>
-  <app-card-actor></app-card-actor>
-
-</section>
+<app-navbar></app-navbar>
+<!-- <app-contact-form></app-contact-form> -->
+<!-- <app-card-actor></app-card-actor> -->
+<app-nation-card></app-nation-card>
