--- a/src/app/contact-form/contact-form.component.scss
+++ b/src/app/contact-form/contact-form.component.scss
@@ -1,6 +1,7 @@
 .center {
     width: 1200px;
     margin: 0 auto;
+    background-color: black;
 }
 
 .contactForm {
@@ -131,42 +132,3 @@ button[type="submit"].validation_button:hover {
     border-radius: 0.3em;
     font-size: 18px;
 }
-
-// Code de Guillaume à garder au cas où ça plante !
-
-// .contactForm {
-//     color: #F5F5F5;
-// h1 {
-//     text-align: center;
-//     color: #F05454;
-//     font-size: 50px;
-//     margin-bottom: 15px;
-//     }
-//     label{
-//         font-size: 20px;
-//         color: #F5F5F5;
-//         display: block;
-//     }
-// .contain {
-//     display: flex;
-//     justify-content: space-around;
-//     flex-wrap: wrap;
-//         .wrap {
-//             width: 40%;
-//             label {
-//                 width: 100%;
-//                 text-align: center;
-//                 margin-bottom: 15px;
-//             }
-//             input {
-//                 width: 70%;
-//                 display: block;
-//                 align-self: center;
-//                 margin: 0 auto;
-//                 margin-bottom: 25px;
-//                 textarea {
-
-//                 }
-//             }
-//         }
-//     }
