--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -12,6 +12,7 @@ body {
     justify-content: flex-end;
     a {
       white-space: nowrap;
+      position: relative;
       display: flex;
       align-items: center;
       margin-left: 30px;
@@ -28,18 +29,22 @@ body {
   
   a::after{
     content: "";
+    position: absolute;
     display: block;
-    width: 100px;
+    width: 10%;
     height: 2px;
-    top: 20px;
-    background-color: white;
-    transform: scale(1);
-    transition: transform 0.2s ease-in-out;
+    bottom: 10px;
+    left: 0;
+    right: 0;
+    background-color: black;
+    transform: scale(0);
+    transition: transform 0.5s ease-in-out;
   }
   a:hover::after {
     transform: scale(1);
     content: "";
     background-color: white;
+    width: 100%;
   }
 }
 
