--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-navbar></app-navbar>
-<!-- <app-contact-form></app-contact-form> -->
+<app-contact-form></app-contact-form>
 <!-- <app-card-actor></app-card-actor> -->
-<app-nation-card></app-nation-card>
+<!-- <app-nation-card></app-nation-card> -->
