--- a/src/app/contact-form/contact-form.component.scss
+++ b/src/app/contact-form/contact-form.component.scss
@@ -7,10 +7,11 @@
 .contactForm {
     color: #f5f5f5;
     h1 {
+        margin-bottom: 50px;
+        margin-top: 50px;
         text-align: center;
         color: #f05454;
         font-size: 60px;
-        margin-bottom: 20px;
     }
     .contain {
         display: flex;
