--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,10 +5,10 @@
          
     <!-- <div class="spacer"></div> -->
 <nav>
-    <a href="#USA">Français</a>
-    <a href="#USA">Anglais</a>
-    <a href="#USA">Americains</a>
-    <a href="/contact">Contact</a>
+    <a href="#Français">Français</a>
+    <a href="#Anglais">Anglais</a>
+    <a href="#Américains">Americains</a>
+    <a routerLink="Contact">Contact</a>
 </nav>
 
     </div>
