--- a/src/app/card-actor/card-actor.component.scss
+++ b/src/app/card-actor/card-actor.component.scss
@@ -4,12 +4,13 @@ $black: #121212;
 $white: #F5F5F5; 
 
 #card{
+    margin: 50px auto;
+    background-color: #F5F5F5;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     width: 1200px;
-    height: 25em;
-    margin: 0 auto;
+    height: 27em;
     border-radius: 10px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
     transition-duration: 0.5s;
