--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -8,7 +8,7 @@
     <a href="#USA">Français</a>
     <a href="#USA">Anglais</a>
     <a href="#USA">Americains</a>
-    <a href="/contact">Contact</a>
+    <a routerLink="Contact">Contact</a>
 </nav>
 
     </div>
