--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,10 +1,11 @@
 <!--<mat-toolbar color="primary" class="mat-elevation-z6">-->
 
     <div class="center">
-         <span><img src="assets/image/logo.png"></span>
+         <a><img src="assets/image/logo.png"></a>
          
     <div class="spacer"></div>
 <nav>
+
     
     <a mat-button routerLink="français">Français</a>
     <a mat-button routerLink="anglais">Anglais</a>
