--- a/src/app/card-actor/card-actor.component.scss
+++ b/src/app/card-actor/card-actor.component.scss
@@ -8,22 +8,25 @@ $white: #F5F5F5;
     background-color: #F5F5F5;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    // justify-content: space-between;
     width: 1200px;
-    height: 27em;
+    // height: 27em;
     border-radius: 10px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
     transition-duration: 0.5s;
 
     #info_actor{
         display: flex;
-        justify-content: row;
+        justify-content: space-between;
 
         #text-actor{
-
+            margin-top: auto;
+            margin-bottom: auto;
+            width: 50%;
             #name-actor{
     
                 margin: 30px;
+                margin-bottom: 50px;
     
                 h2{
                     margin: 0;
@@ -53,7 +56,9 @@ $white: #F5F5F5;
             }
     
             #description-actor{
-                margin: 30px;
+                margin: 0;
+                margin-left: 30px;
+                
             }
     
     
@@ -61,13 +66,16 @@ $white: #F5F5F5;
     
     
         #image-actor{
+            width: 50%;
     
             img{
                 -webkit-box-shadow: 6px 7px 11px -1px rgba(0,0,0,0.61); 
                 box-shadow: 6px 7px 11px -1px rgba(0,0,0,0.61);
                 border-radius: 35px;
-                margin: 50px;
-                width: 40%;
+                display: block;
+                // margin: 50px;
+                height: 300px;
+                margin:  50px auto;
             }
         }
     }
@@ -75,6 +83,7 @@ $white: #F5F5F5;
 
 
     #chevron{
+        margin-top: auto;
         margin-left: auto;
         margin-right: auto;
 
