--- a/src/app/nation-card/nation-card.component.scss
+++ b/src/app/nation-card/nation-card.component.scss
@@ -19,6 +19,7 @@ body {
          {
             font-size: 40px;
             font-weight: 700;
+            margin-bottom: 50px;
             letter-spacing: 3px;
             text-transform: uppercase;
             color: #F05454;
@@ -32,8 +33,9 @@ body {
                 z-index: -1;
                 bottom: 2px;
                 height: 20px;
-                width: 215px;
+                width: 150px;
                 background-color: #30475E;
+                border-radius: 5px;
             }
             &:after {
                 content: "";
@@ -41,10 +43,11 @@ body {
                 position: absolute;
                 z-index: -1;
                 top: 2px;
-                right: 140px;
+                // right: 80px;
                 height: 20px;
-                width: 245px;
+                width: 80%;
                 background-color: #30475E;
+                border-radius: 5px;
             }
         }
         h2 {
@@ -59,6 +62,7 @@ body {
         }
         p {
             text-align: right;
+            padding-left: 20px;
             padding-right: 20px;
             color: #30475E;
             font-size: 14px;
